[package]
name = "address-artisan"
version = "0.1.2"
description = "A tool for generating vanity P2PKH Bitcoin addresses."
authors = ["Marcus Lacerda <marcuslacerda@tutamail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/seaasses/address-artisan"
edition = "2021"


[dependencies]
bs58 = "0.5.1"
clap = { version = "4.5.51", features = ["derive"] }
ctrlc = "3.5.1"
rand = "0.9.2"
secp256k1 = "0.31.1"
sha2 = { version = "0.10.9", features = ["asm"] }
ripemd = "0.1.3"
hmac = "0.12.1"
threadpool = "1.8.1"
lru = "0.16.2"
sysinfo = "0.37.2"
num-bigint = "0.4.6"
num-traits = "0.2.19"
bitcoin = "0.32.7"
