[package]
name = "address-artisan"
version = "0.2.325"
description = "Vanity Bitcoin address generator based on BIP32 extended public keys with GPU acceleration."
authors = ["Marcus Lacerda <marcuslacerda@tutamail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/seaasses/address-artisan"
homepage = "https://github.com/seaasses/address-artisan"
keywords = ["bitcoin", "vanity", "gpu", "xpub", "address"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies", "concurrency"]
edition = "2021"
rust-version = "1.70"

[package.metadata.release]
notes = """
## What's Changed
- Improved CI/CD workflows
- Better version validation in pull requests
- Automated GitHub releases with custom release notes
- Multi-architecture Linux binaries (x86_64 and ARM64)

## Contributors
Thanks to everyone who contributed to this release!
"""

[dependencies]
bs58 = "0.5.1"
clap = { version = "4.5.51", features = ["derive"] }
ctrlc = "3.5.1"
rand = "0.9.2"
secp256k1 = "0.31.1"
ripemd = "0.1.3"
hmac = "0.12.1"
threadpool = "1.8.1"
lru = "0.16.2"
sysinfo = "0.37.2"
num-bigint = "0.4.6"
num-traits = "0.2.19"
bitcoin = "0.32.7"
ocl = "0.19.7"

# Platform-specific dependencies
[target.'cfg(not(windows))'.dependencies]
sha2 = { version = "0.10.9", features = ["asm"] }

[target.'cfg(windows)'.dependencies]
sha2 = "0.10.9"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true